Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-100204

Server should not reject text search FLE2InsertUpdatePayload where all token sets are empty

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Server Security
    • Fully Compatible
    • ALL
    • Security 2025-02-03

      For text search inserts, it's a valid case where a FLE2InsertUpdatePayload's token sets may contain empty arrays for all of the substring, suffix, and prefix token sets. This can happen if the user inserts a string whose cbc-padded length is shorter than the lower bound.

            Assignee:
            erwin.pe@mongodb.com Erwin Pe
            Reporter:
            erwin.pe@mongodb.com Erwin Pe
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: