SERVER-100204 Server should not reject text search FLE2InsertUpdatePayload where all token sets are empty (#31821)

GitOrigin-RevId: ef02ebc211ca8f33c214936c10bb5df42faba6ff